[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lidar-catenary"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "pyarrow",        # for parquet
    "scikit-learn",   # DBSCAN + PCA
    "scipy",          # curve fitting
    "pyyaml",         # config.yml loading
    "matplotlib",     # optional, for plots
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["lidar_catenary*"]

[tool.setuptools.package-data]
"lidar_catenary" = ["config/*.yml"]
